--- a/plugins/base/src/main/resources/dokka/styles/logo-styles.css
+++ b/plugins/base/src/main/resources/dokka/styles/logo-styles.css
@@ -1,15 +1,21 @@
-.library-name a {
-    position: relative;
-    margin-left: 55px;
+.library-name--link {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    font-weight: 700;
 }
 
-.library-name a::before {
+.library-name--link::before {
     content: '';
     background: url("../images/logo-icon.svg") center no-repeat;
-    background-size: contain;
-    position: absolute;
+    background-size: 50px;
+    margin-right: 5px;
     width: 50px;
     height: 50px;
-    top: -18px;
-    left: -55px;
+}
+
+@media (max-width: 759px) {
+    .library-name--link::before {
+        display: none;
+    }
 }
