Fix: long code token in mobile view

--- a/plugins/base/src/main/resources/dokka/styles/style.css
+++ b/plugins/base/src/main/resources/dokka/styles/style.css
@@ -648,6 +648,16 @@ code.paragraph {
     position: relative;
 }
 
+code {
+    overflow-x: auto;
+    max-width: 100%;
+}
+
+code:not(.block) {
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .symbol > a {
     color: var(--hover-link-color);
 }
