--- a/plugins/base/src/main/resources/dokka/styles/style.css
+++ b/plugins/base/src/main/resources/dokka/styles/style.css
@@ -423,6 +423,10 @@ td:first-child {
     width: var(--sidebar-width);
 }
 
+.no-js .sidebar {
+    display: none;
+}
+
 /*.theme-dark .sidebar {
     box-shadow: inset 0 1px 0 0 hsl(0deg 0% 100% / 30%);
 }*/
@@ -1078,7 +1082,10 @@ p.paragraph img {
 
 .filter-section .platform-tag:not([data-active]) {
     color: #fff;
-    outline: 1px solid rgba(255,255,255,.6);
+    /* Safari `outline` is incompatible with `border-radius`... */
+    /* outline: 1px solid rgba(255,255,255,.6);  */
+    /* ...use box-shadow instead */
+    box-shadow: 0 0 0 1px rgba(255,255,255,.6) inset;
     background-color: rgba(255,255,255,.05);
 }
 
